# chatterbox

./: .dockerignore  .env  .gitignore  1_Install.bat  1_Install.ps1  2_Start.bat  2_Start_ChatterBox.ps1  2_Start_Chatterbox.bat  2_Start_ML.bat  ADDING_NEW_LANGUAGE.md  ADVANCED_USAGE.md  AUDIOBOOK_ENHANCED_README.md  BNB_QUANTIZATION.md  CACHING_GUIDE.md  CACHING_SUMMARY.md  COLAB_FIX_DETAILS.md  COLAB_SETUP.ipynb  CONTEXT.md  CUDA_OPTIMIZATION.md  Chatterbox TTS - Longer Audio  ConcatOutputCommand.cs  DEEP_OPTIMIZATION_GUIDE.md  Dockerfile  DumpCommand.cs  EpubToMarkdownConverter.cs  FINE_TUNING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  Install.bat  Jewellery Voice  LICENSE  MANIFEST.in  Makefile  OPTIMIZATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  PENDING.md  Program.cs  README.md  README_ENHANCED.md  README_finetune.md  README_service.md  (+106 more)
.codeboarding/: Audio Synthesis & Vocoding (S3Gen & HiFi-GAN).md  Chatterbox Core Systems.md  Gradio User Interfaces.md  Speech Generative Models (T3 & Matcha).md  Text & Audio Preprocessing.md  Voice Embedding & Conditioning.md  on_boarding.md
.github/workflows/: build.yml  checks.yml  install_check.yml  python-package-conda.yml  python-publish.yaml  release-on-tag-push.yml
analysis/: analyze_tags.py  inspect_checkpoints.py  verify_speakers.py
app/AI/: AskGemini.py  chat_service.py  knowledge_base.py
app/audio/: mtl_tts.py  voice_service.py
app/bot/: bot.py
app/db/: storage.py
benchmark_multilingual_output/: multilingual_results.json
benchmark_output/: benchmark_results.json
chatterbox_env/: pyvenv.cfg
chatterbox_env/Scripts/: activate  activate.bat  numba  pygrun
chattractive/: __init__.py  antisleep.py
chattractive/ai/: chat_service.py  knowledge_base.py
chattractive/audio/: __init__.py  mtl_tts.py  tts.py  vc.py  voice_service.py
chattractive/bot/: bot.py
chattractive/db/: __init__.py
data/: FPIN_ITMO_full.txt  ITMO_full.txt  LISA_ITMO_full.txt
docs/: ANALYSIS.md  getting-started.mdx  index.mdx  mint.json
docs/adr/: 0001-mlx-port-boundary.md  0002-backbone-construction-strategy.md  0003-weight-conversion-strategy.md  0004-poc-scope-reduction.md  0005-success-criteria.md
docs/guides/: business.mdx  developer.mdx  devops.mdx
examples/: Start.bat  Start_CHATTERBOX.ps1  Start_ML.bat  example_for_mac.py  example_tts.py  example_vc.py  gradio_tts_app.py  gradio_vc_app.py  multilingual_app.py
locales/: ml_IN.json
models/: wrapper.py
models/common/: perceiver.py
models/s3gen/: __init__.py  const.py  decoder.py  flow.py  flow_matching.py  s3gen.py
models/s3gen/matcha/: decoder.py  flow_matching.py
models/s3gen/s3tokenizer/: const.py  s3tokenizer.py
models/s3gen/transformer/: upsample_encoder.py
models/s3gen/utils/: class_utils.py
models/s3tokenizer/: __init__.py  s3tokenizer.py
models/t3/: t3.py
models/t3/modules/: cond_enc.py  learned_pos_emb.py  t3_config.py
models/tokenizers/: __init__.py  tokenizer.py
models/voice_encoder/: __init__.py  voice_encoder.py
orator/models/: wrapper.py
orator/models/s3tokenizer/: __init__.py
plans/: 2026-04-23-ab-test-paralinguistic-tag-tokens.md  2026-04-23-finetune-chatterbox-t3-for-paralinguistic-tags.md
profiling_output/: sync_report.txt  timing_report.txt
pyinstaller-hooks/: rthook_disable_typeguard.py  rthook_patch_inspect.py  rthook_setup_cuda_path.py  rthook_triton_nvidia_only.py
scripts/: convert_weights_mlx.py  poc_end_to_end.py  poc_mlx.py  train_lora.py
server/: README.md  client.html  server.py
service/: Dockerfile  config.py  main.py  server.py  utils.py
skyrimnet-chatterbox/: InterruptionFlag.py  __init__.py  __main__.py  api.py  cache_utils.py  shared_config.py  skyrimnet_chatterbox.py
skyrimnet-chatterbox/chatterbox/: __init__.py  mtl_tts.py  shared_utils.py  tts.py  vc.py
splits/: build_splits.py  tag_whitelist.json
src/: api.py  cache_utils.py  simple_model_state.py
src/chatterbox/: __init__.py  __main__.py  asr.py  audio_editing.py  audio_utils.py  audiobook_processing.py  cli.py  client.py  client_audio_stream.py  generation_utils.py  inference.py  mtl_tts.py  mtl_tts_mlx.py  optimized_tts.py  server.py  shared_utils.py  streaming.py  tensor_utils.py  text_utils.py  timed_tts.py  tts.py  tts_mlx.py  tts_nano.py  tts_turbo.py  ultra_optimized_tts.py  utils.py  vc.py  word_timestamps.py
src/chatterbox_ng/: __init__.py  mtl_tts.py  tts.py  tts_turbo.py  vc.py
src/extension_chatterbox/: InterruptionFlag.py  api.py  decorator_convert_audio_output_generator.py  demo.py  gradio_app.py  memory.py
src/finetune/: custom_arguments.py  custom_models.py  dataset.py  finetune_t3.py  hyperparam_search.py  load_data.py  load_model.py  preprocess_dataset.py
src/orator/: __init__.py  tts.py  vc.py
src/tools/: profiler_python_utils.py  profiling_wrapper.py  sync_hunter.py
src/tts_webui/: settings_tab_gradio.py
tests/: test_audio_editing.py  test_hebrew_diacritization.py  test_imports.py  test_optimizations.py  test_streaming.py
tests/mlx/: test_t3_mlx.py
transforms/: spectrogram.py  syn_transforms.py
tts-venv/: pyvenv.cfg
venv311/: pyvenv.cfg
venv311/Scripts/: activate  activate.bat  num2words  numba
(+201 files in other folders)
