[project]
name = "chatterbox-tts"
version = "0.1.6"
description = "Chatterbox: Open Source TTS and Voice Conversion by Resemble AI"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "resemble-ai", email = "engineering@resemble.ai"}
]
dependencies = [
    "numpy",
    "torch",
    "torchaudio",
    "transformers>=4.46.0,<5.0.0",
    "diffusers",
    "safetensors",
    "s3tokenizer",
    "einops",
    "scipy",
    "pyloudnorm",
    "soundfile",
    "tokenizers",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/BBC-Esq/chatterbox-light"
Repository = "https://github.com/BBC-Esq/chatterbox-light"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
