[project]
name = "chatterbox-tts"
version = "0.1.1"
description = "Chatterbox TTS fork by the Alexandra Institute with a finetuning framework for Danish and other languages"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {file = "LICENSE"}
authors = [
    {name = "alexandra-instituttet"}
]
dependencies = [
    # numpy 1.x for Python < 3.13 (no 1.x wheels on 3.13+), numpy 2.x for 3.13+
    "numpy>=1.24.0,<2.0.0; python_version < '3.13'",
    "numpy>=2.0.0; python_version >= '3.13'",
    "librosa==0.11.0",
    "s3tokenizer",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    # transformers 5.x rewrote masking/cache internals in a way that breaks CUDA graph capture
    "transformers==4.46.3",
    "diffusers==0.29.0",
    "resemble-perth @ git+https://github.com/resemble-ai/Perth.git@master",
    "conformer==0.3.2",
    "safetensors==0.5.3",
    "num2words>=0.5.14",
    "nltk",
    "pyloudnorm",
    "omegaconf",
    "soundfile",
]

[project.optional-dependencies]
finetune = [
    "gradio==6.8.0",
    "datasets[audio]>=4.0.0",
    "accelerator>=2024.9.13",
    "accelerate>=1.8.1",
    "wandb>=0.21.0",
    "torchcodec==0.5.0",
    "optuna>=4.7.0",
]

multilingual = [
    "spacy-pkuseg",
    "pykakasi==2.3.0",
]



[project.urls]
Homepage = "https://github.com/resemble-ai/chatterbox"
Repository = "https://github.com/resemble-ai/chatterbox"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = []
